--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="main">
-        <div class="grid wide">
+        <div class="container grid wide">
             <div class="header">
                 <div class="lights"></div>
                 <div class="out-game">
