--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="./css/grid.css">
     <link rel="stylesheet" href="./css/styleSigning.css">
     <link rel="stylesheet" href="./fornt/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="./css/responsiveSinging.css">
     <title>BẦU CUA TÔM CÁ - ĐĂNG NHẬP - ĐĂNG KÍ</title>
 </head>
 <body>
     <div class="grid wide">
         <div class="row">
-            <div class="col l-6 l-o-3 container">
-                <div class="col l-12 c-12 header">
+            <div class="col l-6 l-o-3 m-12 c-12 container">
+                <div class="header">
                     <div class="lights"></div>
                     <div class="signin-state signing-active"><span>Đăng nhập</span> </div>
                     <div class="signup-state"><span>Đăng ký</span> </div>
                 </div>
-                <div class="row no-gutters content">
-
-                    <div class="col l-12 m-12 c-12 signing">
+                <div class="content">
+                    <div class="signing">
                         <div class="sign-in-container">
                             <div class="avatar-user"></div>
                             <h1 class="heading">Đăng nhập tài khoản của bạn</h1>
