--- a/main.html
+++ b/main.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta viewport content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./fornt/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/grid.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>Bầu Cua Tôm Cá</title>
     <link rel="icon" href="./img/gamepad.png">
 </head>
@@ -33,7 +34,7 @@
             </div>
             <hr>
             <div class="row">
-                <div class="box-animal l-7 m-8 c-12 col">
+                <div class="box-animal l-7 m-12 c-12 col">
                     <div class="row">
                         <div class="item l-4 c-6 m-4 col ">
                             <img src="./img/bau.jpg" alt="">
@@ -85,8 +86,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="control l-5 m-4 c-12 col">
-                    <div class="circle">
+                <div class="control l-5 m-12 c-12 col">
+                    <div class="control-container">
                         <div id="dice1"></div>
                         <div id="dice2"></div>
                         <div id="dice3"></div>
